Fixed protocol template table header covered by the list [SCI-9520]

--- a/app/assets/stylesheets/protocols/index.scss
+++ b/app/assets/stylesheets/protocols/index.scss
@@ -20,6 +20,7 @@
       width: 100%;
 
       .dataTables_scrollHead {
+        overflow: visible !important;
 
         thead {
           .sci-checkbox-container {
